--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -43,8 +43,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.261153Z",
-     "start_time": "2025-05-26T19:48:52.254894Z"
+     "end_time": "2025-05-26T20:09:30.159968Z",
+     "start_time": "2025-05-26T20:09:30.153034Z"
     }
    },
    "outputs": [
@@ -56,7 +56,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 48
   },
   {
    "cell_type": "code",
@@ -74,8 +74,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.339163Z",
-     "start_time": "2025-05-26T19:48:52.333941Z"
+     "end_time": "2025-05-26T20:09:30.184961Z",
+     "start_time": "2025-05-26T20:09:30.180692Z"
     }
    },
    "outputs": [
@@ -87,7 +87,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 49
   },
   {
    "cell_type": "code",
@@ -105,8 +105,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.414268Z",
-     "start_time": "2025-05-26T19:48:52.409633Z"
+     "end_time": "2025-05-26T20:09:30.228398Z",
+     "start_time": "2025-05-26T20:09:30.223675Z"
     }
    },
    "outputs": [
@@ -118,7 +118,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 50
   },
   {
    "cell_type": "markdown",
@@ -140,7 +140,7 @@
     "import numpy as np\n",
     "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
     "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
-    "print(np.mean(sum_purchases))"
+    "print('numPy:', np.mean(sum_purchases))"
    ],
    "metadata": {
     "id": "nSha1iR7XVS4",
@@ -149,8 +149,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.500948Z",
-     "start_time": "2025-05-26T19:48:52.457986Z"
+     "end_time": "2025-05-26T20:09:30.259918Z",
+     "start_time": "2025-05-26T20:09:30.256356Z"
     }
    },
    "outputs": [
@@ -158,11 +158,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "667.95\n"
+      "numPy: 667.95\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 51
   },
   {
    "cell_type": "code",
@@ -173,8 +173,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.515761Z",
-     "start_time": "2025-05-26T19:48:52.511339Z"
+     "end_time": "2025-05-26T20:09:30.293542Z",
+     "start_time": "2025-05-26T20:09:30.289307Z"
     }
    },
    "source": [
@@ -185,19 +185,18 @@
     "for i in range(len(sum_purchases)):\n",
     "    total_sum += sum_purchases[i]\n",
     "sample_mean = (1/len(sum_purchases)) * total_sum\n",
-    "print(sample_mean)\n",
-    "\n"
+    "print('my calc:', sample_mean)\n"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "667.95\n"
+      "my calc: 667.95\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 52
   },
   {
    "cell_type": "markdown",
@@ -228,7 +227,7 @@
     "else:\n",
     "    mediana = (sum_purchases[n // 2 - 1] + sum_purchases[n // 2]) / 2\n",
     "\n",
-    "print(mediana)"
+    "print('my calc:', mediana)"
    ],
    "metadata": {
     "id": "x58BumvuT2nl",
@@ -237,8 +236,8 @@
     },
     "outputId": "846407b1-0774-49ba-d517-806b13282b94",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.533008Z",
-     "start_time": "2025-05-26T19:48:52.529018Z"
+     "end_time": "2025-05-26T20:09:30.330856Z",
+     "start_time": "2025-05-26T20:09:30.326511Z"
     }
    },
    "outputs": [
@@ -246,23 +245,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "319.0\n"
+      "my calc: 319.0\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "\n",
-    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
-    "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
-    "\n",
-    "mediana = np.median(sum_purchases)\n",
-    "\n",
-    "print(mediana)"
+    "print('numPy:', np.median(sum_purchases))"
    ],
    "metadata": {
     "colab": {
@@ -271,8 +265,8 @@
     "id": "YbheIbL_3cWV",
     "outputId": "800c2d91-b5fa-4a03-ef13-ff1b72051f91",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.561466Z",
-     "start_time": "2025-05-26T19:48:52.554606Z"
+     "end_time": "2025-05-26T20:09:30.369458Z",
+     "start_time": "2025-05-26T20:09:30.367026Z"
     }
    },
    "outputs": [
@@ -280,11 +274,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "319.0\n"
+      "numPy: 319.0\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 54
   },
   {
    "cell_type": "markdown",
@@ -303,9 +297,9 @@
   {
    "cell_type": "code",
    "source": [
-    "# sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
-    "#   239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
     "import math\n",
+    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
+    "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
     "sample_mean = 0;\n",
     "total_sum = 0;\n",
     "variance = 0;\n",
@@ -321,7 +315,7 @@
     "\n",
     "standard_deviation = math.sqrt(variance)\n",
     "\n",
-    "print(standard_deviation)"
+    "print('my calc:', standard_deviation)"
    ],
    "metadata": {
     "id": "X4ixtmL2T642",
@@ -330,8 +324,8 @@
     },
     "outputId": "0c73a1c6-56c8-4c63-9c9d-19235cb1c44d",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.587900Z",
-     "start_time": "2025-05-26T19:48:52.581008Z"
+     "end_time": "2025-05-26T20:09:30.410740Z",
+     "start_time": "2025-05-26T20:09:30.406827Z"
     }
    },
    "outputs": [
@@ -339,17 +333,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1096.0692713054227\n"
+      "my calc: 1096.0692713054227\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "source": [
     "std_dev = np.std(sum_purchases)\n",
-    "print(std_dev)"
+    "print('numPy:', std_dev)"
    ],
    "metadata": {
     "colab": {
@@ -358,8 +352,8 @@
     "id": "PyJssVLZsMoh",
     "outputId": "53416389-5500-4805-ca13-eb3acb22f674",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.618932Z",
-     "start_time": "2025-05-26T19:48:52.611553Z"
+     "end_time": "2025-05-26T20:09:30.454917Z",
+     "start_time": "2025-05-26T20:09:30.451062Z"
     }
    },
    "outputs": [
@@ -367,11 +361,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1096.0692713054227\n"
+      "numPy: 1096.0692713054227\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 56
   },
   {
    "cell_type": "markdown",
@@ -405,10 +399,8 @@
     "    total_sum += ages[i]\n",
     "ages_sample_mean = (1/len(ages)) * total_sum\n",
     "\n",
-    "# with numpy\n",
-    "# ages_sample_mean = np.mean(ages);\n",
-    "\n",
-    "print(ages_sample_mean)"
+    "print('my calc:', ages_sample_mean)\n",
+    "print('numPy:', np.mean(ages))"
    ],
    "metadata": {
     "id": "RdIU4M-7T8R4",
@@ -417,8 +409,8 @@
     },
     "outputId": "3be706dd-1b48-47d1-848b-516012aa65a3",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.666194Z",
-     "start_time": "2025-05-26T19:48:52.653965Z"
+     "end_time": "2025-05-26T20:09:30.508418Z",
+     "start_time": "2025-05-26T20:09:30.504222Z"
     }
    },
    "outputs": [
@@ -426,11 +418,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.280701754385962\n"
+      "my calc: 17.280701754385962\n",
+      "numPy: 17.280701754385966\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 57
   },
   {
    "cell_type": "markdown",
@@ -452,10 +445,8 @@
    "cell_type": "code",
    "source": [
     "import math\n",
-    "visits = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4,\n",
-    "        7,  4,  2]\n",
-    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
-    "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
+    "visits = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4, 7,  4,  2]\n",
+    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281, 239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
     "\n",
     "sum_purchases_sample_mean = 0;\n",
     "visits_sample_mean = 0;\n",
@@ -481,7 +472,7 @@
     "r = covXY / (std_deviation_sum_purchases * std_deviation_visits);\n",
     "\n",
     "\n",
-    "print(covXY);\n"
+    "print('my calc:', covXY);\n"
    ],
    "metadata": {
     "id": "4OIGBT7UOWhO",
@@ -490,8 +481,8 @@
     },
     "outputId": "b266d527-ff09-43e0-98e2-6262f8bcd565",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.701851Z",
-     "start_time": "2025-05-26T19:48:52.695299Z"
+     "end_time": "2025-05-26T20:09:30.547276Z",
+     "start_time": "2025-05-26T20:09:30.541230Z"
     }
    },
    "outputs": [
@@ -499,17 +490,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-990.1368421052631\n"
+      "my calc: -990.1368421052631\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 58
   },
   {
    "cell_type": "code",
-   "source": [
-    "print(np.cov(sum_purchases, visits));"
-   ],
+   "source": "print('numPy:', np.cov(sum_purchases, visits));",
    "metadata": {
     "id": "YLNF7VbeT97Q",
     "colab": {
@@ -517,8 +506,8 @@
     },
     "outputId": "11ec9335-2a0a-44a1-8582-b0c6e72b8f71",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:48:52.742349Z",
-     "start_time": "2025-05-26T19:48:52.736565Z"
+     "end_time": "2025-05-26T20:09:30.589164Z",
+     "start_time": "2025-05-26T20:09:30.585021Z"
     }
    },
    "outputs": [
@@ -526,21 +515,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.26459773e+06 -9.90136842e+02]\n",
+      "numPy: [[ 1.26459773e+06 -9.90136842e+02]\n",
       " [-9.90136842e+02  8.46315789e+00]]\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 59
   },
   {
    "cell_type": "code",
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "visits = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4,\n",
-    "        7,  4,  2]\n",
-    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
-    "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
+    "visits = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4, 7,  4,  2]\n",
+    "sum_purchases = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281, 239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
     "plt.scatter(sum_purchases, visits)\n",
     "plt.title('Scatter Plot of Purchases vs. Visits')\n",
     "plt.xlabel('Sum of Purchases')\n",
@@ -554,18 +541,11 @@
     "id": "gaeoGA-5Prr1",
     "outputId": "3abf11ad-7e16-4d97-9448-06c7208c7c96",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:49:11.248280Z",
-     "start_time": "2025-05-26T19:48:52.772954Z"
+     "end_time": "2025-05-26T20:09:30.697519Z",
+     "start_time": "2025-05-26T20:09:30.623900Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -577,7 +557,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 60
   },
   {
    "cell_type": "markdown",
@@ -594,10 +574,8 @@
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
-    "visits_Y = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4,\n",
-    "        7,  4,  2]\n",
-    "sum_purchases_X = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281,\n",
-    "  239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
+    "visits_Y = [ 6,  2, 10,  3,  9,  9,  2,  3,  6,  6, 10,  2,  5, 10,  3,  5,  4, 7,  4,  2]\n",
+    "sum_purchases_X = [ 316,  493,  367,  153,  224,  121,  322,  450,  196,  397,  281, 239,  484,  124,  223,  448,  432,  255, 4310, 3524]\n",
     "\n",
     "threshold_X = 0;\n",
     "threshold_Y = 0;\n",
@@ -641,8 +619,8 @@
     },
     "outputId": "1f483b5e-665e-401e-c1d4-9259c6540f7e",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:49:11.417101Z",
-     "start_time": "2025-05-26T19:49:11.269191Z"
+     "end_time": "2025-05-26T20:09:30.782488Z",
+     "start_time": "2025-05-26T20:09:30.706978Z"
     }
    },
    "outputs": [
@@ -667,7 +645,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 61
   },
   {
    "cell_type": "markdown",
@@ -684,8 +662,8 @@
    "metadata": {
     "id": "FXEFyzaSHEKQ",
     "ExecuteTime": {
-     "end_time": "2025-05-26T19:49:11.448587Z",
-     "start_time": "2025-05-26T19:49:11.444697Z"
+     "end_time": "2025-05-26T20:09:30.792752Z",
+     "start_time": "2025-05-26T20:09:30.791310Z"
     }
    },
    "outputs": [],
